<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/userImage"
        android:layout_width="50dp"
        android:layout_height="50dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_toEndOf="@id/userImage">

        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="@string/sampleUserName"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/userAlias"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="@string/sampleAlias"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                tools:text="@string/separator"/>
            <TextView
                android:id="@+id/timestamp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="@string/sampleDateTime"/>
        </LinearLayout>
        <TextView
            android:id="@+id/statusText"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/sampleStatus"/>
    </LinearLayout>

</RelativeLayout>